test/classes/initializers/phase2/modifyParentConst.good
modifyParentConst.chpl:14: error: cannot update a const field, "x", in phase 2
